--- a/client/src/css/loader.module.css
+++ b/client/src/css/loader.module.css
@@ -2,14 +2,41 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #f00;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(255,255,255,0.7);
 }
-.loaderContainer .loader {
-  left: 50%;
-  top: 30%;
+.loaderContainer .logo {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
   z-index: 1000;
-  position: absulute;
+  width: 10rem;
+  height: 10rem;
+  -webkit-animation: rotation 5s infinite linear;
+          animation: rotation 5s infinite linear;
+}
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+@keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
 }
 /*# sourceMappingURL=loader.module.css.map */
