--- a/client/src/stylus/loader.module.styl
+++ b/client/src/stylus/loader.module.styl
@@ -4,11 +4,26 @@
     position: fixed
     top: 0
     left: 0
-    width: 100%
-    height: 100%
-    background-color: red
-    .loader
-        left: 50%
-        top: 30%
+    width: 100vw
+    height: 100vh
+    background-color: rgba(255, 255, 255, 0.7)
+    .logo
+        position: absolute
+        left: 0
+        top: 0
+        right: 0
+        bottom: 0
+        margin: auto
         z-index: 1000
-        position: absulute
+        width: 10rem
+        height: 10rem
+        animation: rotation 5s infinite linear
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
