--- a/client/src/css/home.module.css
+++ b/client/src/css/home.module.css
@@ -1,4 +1,5 @@
 .container {
+  display: flex;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -32,5 +33,10 @@
   .container {
     max-width: 1536px;
   }
+}
+.container .content .searchBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 /*# sourceMappingURL=home.module.css.map */
