--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -1,6 +1,7 @@
 @import "./variables.styl"
 
 .container
+    display: flex
     width: 100%
     margin-left: auto
     margin-right: auto
@@ -16,3 +17,11 @@
         max-width: 1280px
     @media screen and (min-width: 1536px)
         max-width: 1536px
+    aside
+        30vw
+    .content
+        70vw
+        .searchBar
+            display: flex
+            justify-content: space-between
+            align-items: center
