--- a/client/src/stylus/pagination.module.styl
+++ b/client/src/stylus/pagination.module.styl
@@ -2,9 +2,13 @@
 
 .container
     display: flex
-    justify-content: space-between
+    justify-content: center
     align-items: center
-    width: 60%
+    gap:0.3rem
+    width: 50%
+    input
+      width: 2.5rem
+      margin-right: 0.3rem
 
 .activeButton
     background-color: main-color
