--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -1,42 +1,49 @@
 .container {
   display: flex;
   width: 100%;
+}
+.container aside {
+  width: 15%;
+  height: 100vh;
+  background-color: #f0f1f5;
+}
+.container .content {
+  width: 85%;
   margin-left: auto;
   margin-right: auto;
 }
 @media screen and (min-width: 640px) {
-  .container {
-    max-width: 640px;
+  .container .content {
+    max-width: 580px;
   }
 }
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
+  .container .content {
+    max-width: 640px;
   }
 }
 @media screen and (min-width: 1024px) {
-  .container {
+  .container .content {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .container .content {
     max-width: 1024px;
   }
 }
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
 @media screen and (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
+  .container .content {
+    max-width: 1280px;
   }
 }
-.container .content .searchBar {
+.container .content .orderBar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 1rem 0;
+}
+.container .content .orderBar .empty {
+  width: 20%;
 }
 /*# sourceMappingURL=country-detail.module.css.map */
