--- a/client/src/css/order-by.module.css
+++ b/client/src/css/order-by.module.css
@@ -1,8 +1,8 @@
 .container {
-  width: 40%;
+  width: 30%;
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
+  gap: 0.5rem;
 }
 /*# sourceMappingURL=order-by.module.css.map */
