--- a/client/src/stylus/country-card.module.styl
+++ b/client/src/stylus/country-card.module.styl
@@ -9,8 +9,7 @@
     height:150px
     border-radius: 100%
     background: white
-    box-shadow: 4px 4px 4px #34352a
-
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
     .cardImg
         width:50px
         height:50px
