--- a/client/src/stylus/order-by.module.styl
+++ b/client/src/stylus/order-by.module.styl
@@ -1,8 +1,8 @@
 @import "./variables.styl"
 
 .container
-    width: 40%
+    width: 30%
     display: flex
-    flex-direction: column
     justify-content: flex-start
-    align-items: flex-start
+    align-items: center
+    gap: 0.5rem
