--- a/client/src/stylus/variables.styl
+++ b/client/src/stylus/variables.styl
@@ -1,9 +1,10 @@
-main-font = sans-serif;
-font-size = 14px;
-container-width = 1200px;
+main-font = sans-serif
+font-size = 14px
+container-width = 1200px
 
 /* --- Colors ---- */
-main-color = #1a1b1f;
-secondary-color = green;
-main-modal-color = blue;
-main-text-color = #929292
+main-color = #002448
+secondary-color = #E3E7E8
+base-color = #F0F1F5
+main-modal-color = blue
+main-text-color = #002448
