--- a/client/src/stylus/welcome.module.styl
+++ b/client/src/stylus/welcome.module.styl
@@ -1,4 +1,18 @@
 @import "./variables.styl"
 
-.main-container
-    background: gray
+.container
+   width: 100vw
+   height: 100vh
+   /* The image used */
+   background-image: url(../assets/welcome-bg.jpg)
+   /* Center and scale the image nicely */
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+   display: flex
+   flex-direction: column
+   justify-content:center
+   align-items: center
+   .logo
+      width:300px
+      height: 300px
