--- a/client/src/css/welcome.module.css
+++ b/client/src/css/welcome.module.css
@@ -11,9 +11,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #002448;
 }
 .container .logo {
   width: 300px;
   height: 300px;
+  margin-bottom: 3rem;
 }
 /*# sourceMappingURL=welcome.module.css.map */
