--- a/client/src/stylus/welcome.module.styl
+++ b/client/src/stylus/welcome.module.styl
@@ -13,6 +13,8 @@
    flex-direction: column
    justify-content:center
    align-items: center
+   color: main-color
    .logo
       width:300px
       height: 300px
+      margin-bottom: 3rem
