--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -3,28 +3,49 @@
 .container
     display: flex
     width: 100%
+    min-height: 100vh
     aside
         width:15%
-        height: 100vh
-        background-color:base-color
+        height: inherit
+        background-color:secondary-color
     .content
         width:85%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
         margin-left: auto
         margin-right: auto
-        @media screen and (min-width: 640px)
-            max-width: 580px
-        @media screen and (min-width: 768px)
-            max-width: 640px
-        @media screen and (min-width: 1024px)
-            max-width: 768px
-        @media screen and (min-width: 1280px)
-            max-width: 1024px
-        @media screen and (min-width: 1536px)
-            max-width: 1280px
+        padding: 1rem
+
+        /* The image used */
+        background-image: url(../assets/home-page-bg.png)
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        // Media querys
+        //@media screen and (min-width: 640px)
+            //max-width: 580px
+        //@media screen and (min-width: 768px)
+            //max-width: 640px
+        //@media screen and (min-width: 1024px)
+            //max-width: 768px
+        //@media screen and (min-width: 1280px)
+            //max-width: 1024px
+        //@media screen and (min-width: 1536px)
+            //max-width: 1280px
         .orderBar
             display: flex
             justify-content: space-between
             align-items: center
             padding: 1rem 0
+            height: 10vh
             .empty
                 width: 20%
+        .credits
+            width:100%
+            display: flex
+            justify-content: flex-end
+            align-items: center
+            margin-top: 2rem
