--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -1,49 +1,43 @@
 .container {
   display: flex;
   width: 100%;
+  min-height: 100vh;
 }
 .container aside {
   width: 15%;
-  height: 100vh;
-  background-color: #f0f1f5;
+  height: inherit;
+  background-color: #e3e7e8;
 }
 .container .content {
   width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-}
-@media screen and (min-width: 640px) {
-  .container .content {
-    max-width: 580px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .container .content {
-    max-width: 640px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .container .content {
-    max-width: 768px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container .content {
-    max-width: 1024px;
-  }
-}
-@media screen and (min-width: 1536px) {
-  .container .content {
-    max-width: 1280px;
-  }
+  padding: 1rem;
+/* The image used */
+  background-image: url("../assets/home-page-bg.png");
+/* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .container .content .orderBar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
+  height: 10vh;
 }
 .container .content .orderBar .empty {
   width: 20%;
+}
+.container .content .credits {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 2rem;
 }
 /*# sourceMappingURL=country-detail.module.css.map */
