--- a/client/src/stylus/country-card.module.styl
+++ b/client/src/stylus/country-card.module.styl
@@ -13,7 +13,7 @@
     .cardImg
         width:50px
         height:50px
-        border-radius: 100%
+        clip-path: circle();
     .cardBody
         text-align: center
         margin-top: 0.8rem
