--- a/client/src/stylus/search-bar.module.styl
+++ b/client/src/stylus/search-bar.module.styl
@@ -1,14 +1,30 @@
 @import "./variables.styl"
 
 .container
-    width: 100%
+    width: 70%
+    display: flex
+    justify-content: flex-start
+    align-items: center
     form
-        width:100%
-        display: flex
+        input
+            width: 30vw
+            height: 2.5rem
+            border-radius: 1.5rem
+            padding: 0.2rem 1rem
+            margin: 1rem 0
+            border: 1px solid
+            border-color: gray
+    .search
+        width: 2rem
+        height: 2rem
+        background-color: main-color
+        padding: 0.5rem
+        display: inline-flex
+        flex-direction: column
         justify-content: center
         align-items: center
-        input
-             width: 70%
-             border-radius: 0.5rem
-             padding: 0.2rem 0.5rem
-             margin: 1rem 0
+        border-radius: 100%
+        color: base-color
+        position: relative
+        right: 2.4rem
+        top: 0.12rem
