--- a/client/src/css/country-card.module.css
+++ b/client/src/css/country-card.module.css
@@ -12,7 +12,8 @@
 .card .cardImg {
   width: 50px;
   height: 50px;
-  border-radius: 100%;
+  -webkit-clip-path: circle();
+          clip-path: circle();
 }
 .card .cardBody {
   text-align: center;
