--- a/client/src/css/order-by.module.css
+++ b/client/src/css/order-by.module.css
@@ -1,8 +1,18 @@
 .container {
   width: 30%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   gap: 0.5rem;
+}
+.container select {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 2.5rem;
+  border-radius: 1.5rem;
+  padding: 0.2rem 1rem;
+  margin: 1rem 0;
+  border: 1px solid;
+  background: #fff;
 }
 /*# sourceMappingURL=order-by.module.css.map */
