--- a/client/src/css/pagination.module.css
+++ b/client/src/css/pagination.module.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   gap: 0.3rem;
-  width: 50%;
+  width: 100%;
+  padding: 2rem 1rem;
 }
 .container input {
   width: 2.5rem;
