--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -8,6 +8,14 @@
         width:15%
         height: inherit
         background-color:secondary-color
+        display: flex
+        flex-direction: column
+        justify-content: flex-start
+        align-items: center
+        padding: 2rem 1rem
+        gap: 2rem
+        h3
+            color: main-color
     .content
         width:85%
         display: flex
