--- a/client/src/stylus/order-by.module.styl
+++ b/client/src/stylus/order-by.module.styl
@@ -3,6 +3,16 @@
 .container
     width: 30%
     display: flex
-    justify-content: flex-start
+    justify-content: flex-end
     align-items: center
     gap: 0.5rem
+    select
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        height: 2.5rem
+        border-radius: 1.5rem
+        padding: 0.2rem 1rem
+        margin: 1rem 0
+        border: 1px solid
+        background: white
