--- a/client/src/stylus/pagination.module.styl
+++ b/client/src/stylus/pagination.module.styl
@@ -5,7 +5,8 @@
     justify-content: center
     align-items: center
     gap:0.3rem
-    width: 50%
+    width: 100%
+    padding: 2rem 1rem
     input
       width: 2.5rem
       margin-right: 0.3rem
