--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -1,43 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap");
 .container {
   display: flex;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  font-family: 'Open Sans', sans-serif;
 }
-.container aside {
+.container .wrap {
+  display: flex;
+  width: inherit;
+  height: inherit;
+}
+.container .wrap aside {
   width: 15%;
   height: inherit;
-  background-color: #e3e7e8;
-}
-.container .content {
-  width: 85%;
+  background-color: #002448;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1rem;
-/* The image used */
-  background-image: url("../assets/home-page-bg.png");
-/* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.container .content .orderBar {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 1rem 0;
-  height: 10vh;
+  padding: 2rem 1rem;
+  gap: 2rem;
 }
-.container .content .orderBar .empty {
-  width: 20%;
-}
-.container .content .credits {
+.container .wrap aside .sidebarTexts {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.container .wrap aside .sidebarTexts h1 {
+  width: inherit;
+  text-align: center;
+  color: #f0f1f5;
+  font-size: 2rem;
+}
+.container .wrap aside .sidebarTexts .region {
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.container .wrap aside .sidebarTexts .region h3 {
+  width: inherit;
+  text-align: center;
+  color: #ffc68d;
+  font-size: 1.5rem;
+  padding: 0;
+  margin: 0;
+}
+.container .wrap aside .sidebarTexts .region h4 {
+  width: inherit;
+  text-align: center;
+  color: #f0f1f5;
+  padding: 0;
+  margin: 0;
+}
+.container .wrap .content {
+  position: relative;
+  overflow: hidden;
+  width: 85%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 2rem;
+  padding: 0 5rem;
+  background-color: #f0f1f5;
+}
+.container .wrap .content .bgImg {
+  position: absolute;
+  top: 0;
+  right: vh;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 120vh;
+  height: auto;
+}
+.container .wrap .content .stats {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  gap: 1.5rem;
+}
+.container .wrap .content .stats .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 350px;
+}
+.container .wrap .content .stats .item .logo {
+  width: 70px;
+  height: auto;
+}
+.container .wrap .content .stats .item div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .wrap .content .stats .item div .statTitle {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin: 0;
+}
+.container .wrap .content .stats .item div .statSubtitle {
+  font-size: 2rem;
+  font-weight: semibold;
+  margin: 0;
 }
 /*# sourceMappingURL=country-detail.module.css.map */
