--- a/client/src/stylus/country-detail.module.styl
+++ b/client/src/stylus/country-detail.module.styl
@@ -1,2 +1,103 @@
 @import "./variables.styl"
-@import "./home.module.styl"
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+
+.container
+    display: flex
+    width: 100%
+    height: 100vh
+    font-family: 'Open Sans', sans-serif
+
+    .wrap
+        display: flex
+        width: inherit
+        height: inherit
+        aside
+            width:15%
+            height: inherit
+            background-color:main-color
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            align-items: center
+            padding: 2rem 1rem
+            gap: 2rem
+            .sidebarTexts
+                width:100%
+                display: flex
+                flex-direction: column
+                justify-content: center
+                align-items: center
+                gap: 2rem
+                h1
+                    width:inherit
+                    text-align: center
+                    color: base-color
+                    font-size: 2rem
+                .region
+                    width:inherit
+                    display: flex
+                    flex-direction: column
+                    justify-content: center
+                    align-items: center
+                    gap:0.5rem
+                    h3
+                        width:inherit
+                        text-align: center
+                        color: third-color
+                        font-size: 1.5rem
+                        padding 0
+                        margin 0
+                    h4
+                        width:inherit
+                        text-align: center
+                        color: base-color
+                        padding 0
+                        margin 0
+        .content
+            position: relative
+            overflow: hidden
+            width:85%
+            display: flex
+            justify-content: flex-end
+            align-items: center
+            //margin-left: auto
+            //margin-right: auto
+            padding: 0 5rem
+            background-color: base-color
+            .bgImg
+                position: absolute
+                top:0
+                right: vh
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 120vh;
+                height:auto ;
+            .stats
+                display: flex
+                flex-direction: column
+                justify-content: space-between
+                align-items: center
+                z-index: 1000
+                gap: 1.5rem
+                .item
+                    display: flex
+                    justify-content: space-between
+                    align-items: center
+                    width:350px
+                    .logo
+                        width: 70px
+                        height: auto
+                    div
+                        display:flex
+                        flex-direction:column
+                        justify-content: center
+                        align-items:center
+                        .statTitle
+                            font-size: 2.5rem
+                            font-weight: bold
+                            margin:0
+                        .statSubtitle
+                            font-size: 2rem
+                            font-weight: semibold
+                            margin:0
