--- a/client/src/stylus/variables.styl
+++ b/client/src/stylus/variables.styl
@@ -1,10 +1,14 @@
-main-font = sans-serif
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap')
+
+main-font = 'Signika Negative', sans-serif
+second-font ='Open Sans', sans-serif
 font-size = 14px
 container-width = 1200px
 
 /* --- Colors ---- */
 main-color = #002448
 secondary-color = #E3E7E8
+third-color = #FFC68D
 base-color = #F0F1F5
 main-modal-color = blue
 main-text-color = #002448
