--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap");
 /* -------- Reset CSS ----- */
 html {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Signika Negative', sans-serif;
   font-size: 14px;
   scroll-behavior: scroll;
 }
