--- a/client/src/css/order-by.module.css
+++ b/client/src/css/order-by.module.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap");
 .container {
   width: 30%;
   display: flex;
