--- a/client/src/css/variables.css
+++ b/client/src/css/variables.css
@@ -1,2 +1,3 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap");
 /* --- Colors ---- */
 /*# sourceMappingURL=variables.css.map */
