--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -49,8 +49,20 @@
             align-items: center
             padding: 1rem 0
             height: 10vh
-            .empty
-                width: 20%
+            .itemsPerPage
+                display:flex
+                align-items: center
+                justify-content: flex-end
+                select
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                    height: 2.5rem
+                    border-radius: 1.5rem
+                    padding: 0.2rem 1rem
+                    margin: 1rem 0
+                    border: 1px solid
+                    background: white
         .credits
             width:100%
             display: flex
