--- a/client/src/stylus/variables.styl
+++ b/client/src/stylus/variables.styl
@@ -12,3 +12,32 @@ third-color = #FFC68D
 base-color = #F0F1F5
 main-modal-color = blue
 main-text-color = #002448
+
+
+/* --- Classes ---- */
+.mainSelect
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 2.5rem
+    border-radius: 1.5rem
+    padding: 0.2rem 1rem
+    margin: 1rem 0
+    border: 1px solid
+    background: white
+
+.darkBtn
+    background-color: main-color
+    color: white
+    padding: 0.5rem 1rem
+    border-radius:0.5rem
+    border:none
+    font-size: 14px
+
+.lightBtn
+    background-color: base-color
+    color: main-color
+    padding: 0.5rem 1rem
+    border-radius:0.5rem
+    border:1px solid main-color
+    font-size: 14px
