--- a/client/src/css/countries-search.module.css
+++ b/client/src/css/countries-search.module.css
@@ -26,37 +26,46 @@
   font-size: 14px;
 }
 .container {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.1rem;
-}
-.container .checkbox {
+  justify-content: space-between;
   width: 100%;
+  max-height: 40vh;
+  padding: 0.5rem;
 }
-.container .checkbox .hidden {
-  position: absolute;
-  visibility: hidden;
-  opacity: 0;
-  width: 100%;
+.container p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  font-size: 12px;
 }
-.container .checkbox input[type=radio]+label {
-  display: inline-block;
-  color: main color;
-  width: 100%;
+.container input[type="text"] {
+  width: inherit;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  transition: all 0.3s;
+  border: none;
+  font-size: 12px;
 }
-.container .checkbox input[type=radio]+label:hover {
-  color: #002448;
-  border: 0.7px solid;
-  border-color: #002448;
+.container input[type="text"]:focus {
+  outline: none;
+  border: 1px solid #002448;
 }
-.container .checkbox input[type=radio]:checked+label {
-  width: 100%;
-  color: #f0f1f5;
+.container .countriesList {
+  width: inherit;
+  height: 100%;
+  overflow-Y: auto;
+  background-color: #f0f1f5;
+  margin-bottom: 0;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+.container .countriesList li {
+  list-style-type: none;
+  transition: all 0.2s;
+}
+.container .countriesList li:hover {
+  cursor: pointer;
   background-color: #002448;
+  color: #fff;
 }
-/*# sourceMappingURL=continents-checkbox.module.css.map */
+/*# sourceMappingURL=countries-search.module.css.map */
