--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -1,4 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Signika+Negative:wght@400;500;600;700&display=swap");
+.mainSelect {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 2.5rem;
+  border-radius: 1.5rem;
+  padding: 0.2rem 1rem;
+  margin: 1rem 0;
+  border: 1px solid;
+  background: #fff;
+}
+.darkBtn {
+  background-color: #002448;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  font-size: 14px;
+}
+.lightBtn {
+  background-color: #f0f1f5;
+  color: #002448;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  border: 1px solid #002448;
+  font-size: 14px;
+}
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap");
 .container {
   display: flex;
@@ -10,17 +36,6 @@
   display: flex;
   width: inherit;
   height: inherit;
-}
-.container .wrap aside {
-  width: 15%;
-  height: inherit;
-  background-color: #002448;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2rem 1rem;
-  gap: 2rem;
 }
 .container .wrap aside .sidebarTexts {
   width: 100%;
@@ -68,6 +83,17 @@
   align-items: center;
   padding: 0 5rem;
   background-color: #f0f1f5;
+}
+@media screen and (min-width: 375px) {
+  .container .wrap .content {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
+@media screen and (min-width: 411px) {
+  .container .wrap .content {
+    padding: 0 2rem;
+  }
 }
 .container .wrap .content .bgImg {
   position: absolute;
