--- a/client/src/stylus/create-activity.module.styl
+++ b/client/src/stylus/create-activity.module.styl
@@ -1,4 +1,22 @@
 @import "./variables.styl"
 
 .container
-    background-color: base-color
+    display: flex
+    width: 100%
+    min-height: 100vh
+    .content
+         width:85%
+         display: flex
+         justify-content: center
+         align-items:center
+         padding: 4rem
+         gap:2rem
+
+         /* The image used */
+         background-image: url(../assets/home-page-bg.png)
+         /* Center and scale the image nicely */
+         background-position: center;
+         background-repeat: no-repeat;
+         background-size: cover;
+         @media screen and (min-width: 375px)
+            width: 100%;
