--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -4,68 +4,78 @@
     display: flex
     width: 100%
     min-height: 100vh
-    aside
-        width:15%
-        height: inherit
-        background-color:secondary-color
-        display: flex
-        flex-direction: column
-        justify-content: flex-start
-        align-items: center
-        padding: 2rem 1rem
-        gap: 2rem
-        h3
-            color: main-color
     .content
         width:85%
-        display: flex
-        flex-direction: column
-        justify-content: space-between
-        margin-left: auto
-        margin-right: auto
-        padding: 1rem
-
         /* The image used */
         background-image: url(../assets/home-page-bg.png)
         /* Center and scale the image nicely */
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-
-        // Media querys
-        //@media screen and (min-width: 640px)
-            //max-width: 580px
-        //@media screen and (min-width: 768px)
-            //max-width: 640px
-        //@media screen and (min-width: 1024px)
-            //max-width: 768px
-        //@media screen and (min-width: 1280px)
-            //max-width: 1024px
-        //@media screen and (min-width: 1536px)
-            //max-width: 1280px
-        .orderBar
+        @media screen and (min-width: 375px)
+            width: 100%;
+        .smallContainer
+            height:100%;
             display: flex
+            flex-direction: column
             justify-content: space-between
-            align-items: center
-            padding: 1rem 0
-            height: 10vh
-            .itemsPerPage
-                display:flex
+            margin-left: auto
+            margin-right: auto
+            padding: 1rem
+            @media screen and (min-width: 1280px)
+                max-width: 1024px
+            @media screen and (min-width: 1536px)
+                max-width: 1280px
+            .orderBar
+                display: flex
+                justify-content: space-between
                 align-items: center
+                padding: 1rem 0
+                @media screen and (max-width: 768px)
+                    flex-direction:column
+                .orderContainer
+                    display: flex
+                    width:50%
+                    justify-content:space-between
+                    align-items:center
+                    gap:0.5rem
+                    @media screen and (max-width: 768px)
+                        width: 100%
+                    .itemsPerPage
+                        display:flex
+                        align-items: center
+                        justify-content: flex-end
+                        label
+                            margin-right: 0.5rem
+                            @media screen and (min-width: 768px)
+                                font-size:12px
+                            @media screen and (min-width: 968px)
+                                font-size:14px
+            .credits
+                width:100%
+                display: flex
                 justify-content: flex-end
-                select
-                    -webkit-appearance: none;
-                    -moz-appearance: none;
-                    appearance: none;
-                    height: 2.5rem
-                    border-radius: 1.5rem
-                    padding: 0.2rem 1rem
-                    margin: 1rem 0
-                    border: 1px solid
-                    background: white
-        .credits
-            width:100%
-            display: flex
-            justify-content: flex-end
-            align-items: center
-            margin-top: 2rem
+                align-items: center
+                margin-top: 2rem
+
+//Media querys
+//@media screen and (min-width: 640px)
+//.container
+    //.content
+        //max-width: 540px
+//@media screen and (min-width: 768px)
+//.container
+    //.content
+        //max-width: 640px
+//@media screen and (min-width: 1024px)
+//.container
+    //.content
+        //max-width: 768px
+//@media screen and (min-width: 1280px)
+//.container
+    //.content
+        //max-width: 1024px
+//@media screen and (min-width: 1536px)
+//.container
+    //.content
+        //max-width: 1280px
