--- a/client/src/stylus/order-by.module.styl
+++ b/client/src/stylus/order-by.module.styl
@@ -1,18 +1,12 @@
 @import "./variables.styl"
 
 .container
-    width: 30%
     display: flex
     justify-content: flex-end
     align-items: center
-    gap: 0.5rem
-    select
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        height: 2.5rem
-        border-radius: 1.5rem
-        padding: 0.2rem 1rem
-        margin: 1rem 0
-        border: 1px solid
-        background: white
+    label
+        margin-right: 0.5rem
+        @media screen and (min-width: 768px)
+            font-size:12px
+        @media screen and (min-width: 968px)
+            font-size:14px
