--- a/client/src/stylus/search-bar.module.styl
+++ b/client/src/stylus/search-bar.module.styl
@@ -1,19 +1,25 @@
 @import "./variables.styl"
 
 .container
-    width: 70%
     display: flex
     justify-content: flex-start
     align-items: center
+    @media screen and (max-width: 768px)
+        width: 100%
     form
+        width: inherit
+        position: absolute
+        @media screen and (max-width: 768px)
+            position: relative
         input
             width: 30vw
             height: 2.5rem
             border-radius: 1.5rem
             padding: 0.2rem 1rem
             margin: 1rem 0
-            border: 1px solid
-            border-color: gray
+            border:none
+            @media screen and (max-width: 768px)
+                width: 100%
     .search
         width: 2rem
         height: 2rem
@@ -28,3 +34,7 @@
         position: relative
         right: 2.4rem
         top: 0.12rem
+        @media screen and (max-width: 768px)
+            position: absolute
+            right: 0.3rem
+            top: 1.25rem
