--- a/client/src/css/navbar.module.css
+++ b/client/src/css/navbar.module.css
@@ -6,7 +6,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .darkBtn {
@@ -25,39 +25,86 @@
   border: 1px solid #002448;
   font-size: 14px;
 }
+.mobileMenuIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  border: none;
+  border-radius: 100%;
+  z-index: 1000;
+  color: #002448;
+  padding: 0.8rem;
+  background: #fff;
+  box-shadow: rgba(0,0,0,0.19) 0px 10px 20px, rgba(0,0,0,0.23) 0px 6px 6px;
+}
+@media screen and (min-width: 768px) {
+  .mobileMenuIcon {
+    display: none;
+  }
+}
 .containerDark {
+  display: none;
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   background-color: #e3e7e8;
   color: #002448;
   font-family: 'Open Sans', sans-serif;
 }
-@media screen and (min-width: 375px) {
-  .containerDark {
-    display: none;
-  }
-}
 @media screen and (min-width: 768px) {
   .containerDark {
     display: block;
-    width: 25%;
+    width: 100%;
   }
 }
 .containerLight {
+  display: none;
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
   background-color: #002448;
   color: #e3e7e8;
   font-family: 'Open Sans', sans-serif;
 }
-@media screen and (min-width: 375px) {
-  .containerLight {
-    display: none;
-  }
-}
 @media screen and (min-width: 768px) {
   .containerLight {
     display: block;
-    width: 25%;
+    width: 100%;
   }
+}
+.menuClose {
+  position: fixed;
+  z-index: 999;
+  padding: 1rem;
+  top: 7vh;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  background-color: #fff;
+  width: 100vw;
+  height: 93vh;
+  transition: all 0.5s ease;
+}
+.menuOpen {
+  position: fixed;
+  z-index: 999;
+  padding: 1rem;
+  top: 7vh;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  background-color: #fff;
+  width: 100vw;
+  height: 93vh;
+  transition: all 0.5s ease;
+}
+.menuOpen nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 5rem 2rem;
 }
 .navbar {
   width: 100%;
