--- a/client/src/css/continents-checkbox.module.css
+++ b/client/src/css/continents-checkbox.module.css
@@ -6,7 +6,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .darkBtn {
