--- a/client/src/css/create-activity.module.css
+++ b/client/src/css/create-activity.module.css
@@ -6,7 +6,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .darkBtn {
@@ -29,24 +29,25 @@
   display: flex;
   width: 100%;
   min-height: 100vh;
+  margin-top: 7vh;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    margin-top: 0;
+  }
 }
 .container .content {
-  width: 85%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 4rem;
   gap: 2rem;
+  padding: 1rem;
 /* The image used */
   background-image: url("../assets/home-page-bg.png");
 /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-@media screen and (min-width: 375px) {
-  .container .content {
-    width: 100%;
-  }
 }
 /*# sourceMappingURL=create-activity.module.css.map */
