--- a/client/src/css/selected-countries.module.css
+++ b/client/src/css/selected-countries.module.css
@@ -6,7 +6,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .darkBtn {
@@ -26,7 +26,7 @@
   font-size: 14px;
 }
 .container {
-  width: 40%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   padding: 0.5rem;
@@ -41,7 +41,6 @@
   gap: 0.5rem;
   width: 100%;
   overflow-Y: auto;
-  background-color: #f0f1f5;
   margin: 0;
   padding: 0;
 }
