--- a/client/src/css/variables.css
+++ b/client/src/css/variables.css
@@ -8,7 +8,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .darkBtn {
