--- a/client/src/stylus/create-activity-form.module.styl
+++ b/client/src/stylus/create-activity-form.module.styl
@@ -6,8 +6,12 @@
     flex-direction:column
     justify-content:center
     align-items:center
-    width: 50vw
+    width: 100%
     gap: 2rem
+    @media screen and (min-width: 678px)
+        width: 90%;
+    @media screen and (min-width: 1024px)
+        width: 80%;
     .groupTwo
         width:inherit
         display:flex
@@ -24,6 +28,8 @@
             margin: 1rem 0
             border: 1px solid
             background: white
+            &:focus
+                outline:none
         .error
             color: red
             font-family: second-font
@@ -37,3 +43,4 @@
     .countrySearch
         width:inherit
         display:flex
+        flex-wrap: wrap
