--- a/client/src/stylus/create-activity.module.styl
+++ b/client/src/stylus/create-activity.module.styl
@@ -4,13 +4,16 @@
     display: flex
     width: 100%
     min-height: 100vh
+    margin-top:7vh
+    @media screen and (min-width: 768px)
+        margin-top:0
     .content
-         width:85%
+         width:100%
          display: flex
          justify-content: center
          align-items:center
-         padding: 4rem
          gap:2rem
+         padding: 1rem
 
          /* The image used */
          background-image: url(../assets/home-page-bg.png)
@@ -18,5 +21,3 @@
          background-position: center;
          background-repeat: no-repeat;
          background-size: cover;
-         @media screen and (min-width: 375px)
-            width: 100%;
