--- a/client/src/stylus/home.module.styl
+++ b/client/src/stylus/home.module.styl
@@ -4,16 +4,17 @@
     display: flex
     width: 100%
     min-height: 100vh
+    margin-top:7vh
+    @media screen and (min-width: 768px)
+        margin-top:0
     .content
-        width:85%
+        width:100%
         /* The image used */
         background-image: url(../assets/home-page-bg.png)
         /* Center and scale the image nicely */
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        @media screen and (min-width: 375px)
-            width: 100%;
         .smallContainer
             height:100%;
             display: flex
@@ -30,7 +31,7 @@
                 display: flex
                 justify-content: space-between
                 align-items: center
-                padding: 1rem 0
+                padding-bottom: 1rem
                 @media screen and (max-width: 768px)
                     flex-direction:column
                 .orderContainer
