--- a/client/src/stylus/search-bar.module.styl
+++ b/client/src/stylus/search-bar.module.styl
@@ -18,6 +18,8 @@
             padding: 0.2rem 1rem
             margin: 1rem 0
             border:none
+            &:focus
+                outline:none
             @media screen and (max-width: 768px)
                 width: 100%
     .search
