--- a/client/src/stylus/variables.styl
+++ b/client/src/stylus/variables.styl
@@ -23,7 +23,7 @@ main-text-color = #002448
     border-radius: 1.5rem
     padding: 0.2rem 1rem
     margin: 1rem 0
-    border: 1px solid
+    border: none
     background: white
 
 .darkBtn
