--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -77,10 +77,12 @@
   position: relative;
   overflow: hidden;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
   padding: 0 5rem;
   background-color: #f0f1f5;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 @media screen and (min-width: 375px) {
   .container .wrap .content {
@@ -103,6 +105,52 @@
   width: 120vh;
   height: 100%;
 }
+.container .wrap .content .activities {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 998;
+  color: #002448;
+  gap: 1.5rem;
+  padding: 2rem;
+  background-color: rgba(240,241,245,0.7);
+  box-shadow: rgba(17,17,26,0.1) 0px 8px 24px, rgba(17,17,26,0.1) 0px 16px 56px, rgba(17,17,26,0.1) 0px 24px 80px;
+  border-radius: 1.5rem;
+}
+.container .wrap .content .activities h1 {
+  font-size: 2.5rem;
+}
+.container .wrap .content .activities .activitiesGroup {
+  width: 100%;
+}
+.container .wrap .content .activities .activitiesGroup .item {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+}
+.container .wrap .content .activities .activitiesGroup .item h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-right: 1rem;
+}
+.container .wrap .content .activities .activitiesGroup .item p {
+  margin: 0;
+}
+.container .wrap .content .activities .activitiesGroup .item .seasons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  font-size: 12px;
+}
+.container .wrap .content .activities .activitiesGroup .item .seasons p {
+  text-transform: capitalize;
+  padding: 0.1rem 0.6rem;
+  border-radius: 0.5rem;
+  background-color: #ffc68d;
+}
 .container .wrap .content .stats {
   display: flex;
   flex-direction: column;
@@ -110,6 +158,10 @@
   align-items: center;
   z-index: 998;
   gap: 1.5rem;
+  padding: 2rem;
+  background-color: rgba(240,241,245,0.7);
+  box-shadow: rgba(17,17,26,0.1) 0px 8px 24px, rgba(17,17,26,0.1) 0px 16px 56px, rgba(17,17,26,0.1) 0px 24px 80px;
+  border-radius: 1.5rem;
 }
 .container .wrap .content .stats .item {
   display: flex;
@@ -121,6 +173,12 @@
   .container .wrap .content .stats .item {
     width: 250px;
   }
+}
+.container .wrap .content .stats .item .cardImg {
+  width: 80px;
+  height: 80px;
+  -webkit-clip-path: circle();
+          clip-path: circle();
 }
 .container .wrap .content .stats .item .logo {
   width: 70px;
