--- a/client/src/css/create-activity-form.module.css
+++ b/client/src/css/create-activity-form.module.css
@@ -63,7 +63,7 @@
   border-radius: 1.5rem;
   padding: 0.2rem 1rem;
   margin: 1rem 0;
-  border: 1px solid;
+  border: none;
   background: #fff;
 }
 .container .group input:focus {
