--- a/client/src/css/variables.css
+++ b/client/src/css/variables.css
@@ -18,6 +18,11 @@
   border: none;
   font-size: 14px;
 }
+.darkBtn:hover {
+  background-color: #f0f1f5;
+  color: #002448;
+  border: 1px solid #002448;
+}
 .lightBtn {
   background-color: #f0f1f5;
   color: #002448;
@@ -25,5 +30,10 @@
   border-radius: 0.5rem;
   border: 1px solid #002448;
   font-size: 14px;
+}
+.lightBtn:hover {
+  background-color: #002448;
+  color: #fff;
+  border: 1px solid #fff;
 }
 /*# sourceMappingURL=variables.css.map */
