--- a/client/src/stylus/create-activity-form.module.styl
+++ b/client/src/stylus/create-activity-form.module.styl
@@ -29,7 +29,7 @@
             height: 2.5rem
             border-radius: 1.5rem
             padding: 0.2rem 1rem
-            margin: 1rem 0
+            //margin: 1rem 0
             border: none
             background: white
             &:focus
