--- a/client/src/stylus/variables.styl
+++ b/client/src/stylus/variables.styl
@@ -32,6 +32,11 @@ main-text-color = #002448
     border-radius:0.5rem
     border:none
     font-size: 14px
+    &:hover
+        background-color: base-color
+        color: main-color
+        border: 1px solid main-color
+
 
 .lightBtn
     background-color: base-color
@@ -40,3 +45,7 @@ main-text-color = #002448
     border-radius:0.5rem
     border:1px solid main-color
     font-size: 14px
+    &:hover
+        background-color: main-color
+        color: white
+        border: 1px solid white
