--- a/client/src/css/country-detail.module.css
+++ b/client/src/css/country-detail.module.css
@@ -16,6 +16,11 @@
   border: none;
   font-size: 14px;
 }
+.darkBtn:hover {
+  background-color: #f0f1f5;
+  color: #002448;
+  border: 1px solid #002448;
+}
 .lightBtn {
   background-color: #f0f1f5;
   color: #002448;
@@ -23,6 +28,11 @@
   border-radius: 0.5rem;
   border: 1px solid #002448;
   font-size: 14px;
+}
+.lightBtn:hover {
+  background-color: #002448;
+  color: #fff;
+  border: 1px solid #fff;
 }
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap");
 .container {
