--- a/client/src/stylus/create-activity-form.module.styl
+++ b/client/src/stylus/create-activity-form.module.styl
@@ -34,6 +34,7 @@
             background: white
             &:focus
                 outline:none
+                border: 1px solid main-color
     .season
         width:inherit
         display:flex
