--- a/client/src/stylus/search-bar.module.styl
+++ b/client/src/stylus/search-bar.module.styl
@@ -20,6 +20,7 @@
             border:none
             &:focus
                 outline:none
+                border: 1px solid main-color
             @media screen and (max-width: 768px)
                 width: 100%
     .search
