--- a/client/src/stylus/modal.module.styl
+++ b/client/src/stylus/modal.module.styl
@@ -23,9 +23,16 @@
     line-height: 1.4
     background: base-color
     color:main-color
-    padding: 2rem 3rem
+    padding: 2rem
     border-radius: 1rem
-    max-width: 600px
+    max-width: 800px
     min-width: 300px
     h2
         margin:0
+    .errorMsg
+        color: red
+    .buttonsContainer
+        width: 100%
+        display:flex
+        justify-content: space-between
+        align-items: center
